testsuite/bsc.evaluator/uninit/VectorUninitErr2.bsv.bsc-ccomp-out.expected
checking package dependencies
compiling VectorUninitErr2.bsv
code generation for sysVectorUninitErr2 starts
Error: "VectorUninitErr2.bsv", line 6, column 25: (G0028)
  `v[0]' uses uninitialized value (the position shown is the object's
  declaration). If this error is unexpected, please consult KPNS #32.
  During elaboration of the body of rule `test' at "VectorUninitErr2.bsv",
  line 11, column 8.
  During elaboration of `sysVectorUninitErr2' at "VectorUninitErr2.bsv", line
  4, column 8.
